# renamex

./: .gitignore  ChangeLog.txt  Make.conf  Makefile  Makefile.am  Makefile.in  README.en.txt  README.md  aclocal.m4  autotest  autotest.sh  autotest.txt  config.h.in  configure  configure.ac  main.c  mmgui.c  mmrc_icon_dialog.h  mmrc_icon_error.h  mmrc_icon_info.h  mmrc_icon_warning.h  release.txt  rename-2.0.lsm  rename.c  rename.h  rename.nsi  rename_icon.rc  renamex-2.0.lsm  renamex.1  renamex.desktop  renamex.lsm  tester.c  winxp.sh
libmingw/: liblist.txt
libmingw/include/: libcsoup.h
libmingw/include/iup/: iup.h  iup_mglplot.h  iup_pplot.h  iup_scintilla.h  iupcb.h  iupcbox.h  iupcells.h  iupcolorbar.h  iupcontrols.h  iupdef.h  iupdial.h  iupgauge.h  iupgc.h  iupgetparam.h  iupgl.h  iupkey.h  iuplua.h  iuplua_mglplot.h  iuplua_pplot.h  iuplua_scintilla.h  iupluacontrols.h  iupluagl.h  iupluaim.h  iupluamatrixex.h  iupluaole.h  iupluatuio.h  iupluaweb.h  iupmask.h  iupmatrix.h  iupmatrixex.h  iupole.h  iupsbox.h  iupspin.h  iuptabs.h  iuptree.h  iuptuio.h  iupval.h  iupweb.h  shobjidl.h
libsmm/: libsmm.h
